fixed dark mode theme

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -127,6 +127,9 @@ h1 {
   .motivation {
     color: #E8417C !important;
   }
+  .blue {
+    color: #7A52D2 !important;
+  }
 
   .tag_custom {
     color: #0F131E !important;
